Fix deprecated  and layout:decorator for thymeleaf

--- a/src/main/resources/templates/app-layout.html
+++ b/src/main/resources/templates/app-layout.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 	<meta charset="UTF-8" />
-	<title layout:title-pattern="$DECORATOR_TITLE &there4; $CONTENT_TITLE" th:text="#{app.layout.00002strid}"></title>
+	<title layout:title-pattern="$LAYOUT_TITLE &there4; $CONTENT_TITLE" th:text="#{app.layout.00002strid}"></title>
 </head>
 <body>
 	<div style="width:100%">
