Change syntaxic layout:decorate expression in app-view-index and remove forgotten test in SpringWebConfig file

--- a/src/main/resources/templates/app-view-index.html
+++ b/src/main/resources/templates/app-view-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{app-layout}">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="app-layout">
 <head>
 	<meta charset="UTF-8" />
 	<title>Home</title>
